fix cart and cropper

--- a/src/components/CarsList/CarCard/CarCard.module.css
+++ b/src/components/CarsList/CarCard/CarCard.module.css
@@ -9,6 +9,7 @@
 }
 
 .carCard:hover {
+  background: #e9e9e9;
   top: -8px;
   left: 2px;
   box-shadow: 4px 4px 8px 0px rgba(149, 152, 154, 0.36);
